# [[bin]]
# name = "default-run"
# path = "src/main.rs"
# required-features = []

# [[bin]]
# name = "attributes"
# path = "src/main.rs"
# required-features = ["attributes"]

[build-dependencies]
tonic-build = { default-features = false, version = "0.4.0" }

[dependencies]
anyhow = { default-features = false, features = ["std"], version = "1.0.38" }
casbin = { default-features = false, features = ["runtime-async-std", "tokio"], version = "2.0.6" }
chrono = { default-features = false, version = "0.4.19" }
dotenv = { default-features = false, version = "0.15.0" }
envy = { default-features = false, version = "0.4.2" }
# fip_api_attributes = { default-features = false, path = "../fip_api_attributes", version = "0.1.0" }
fip_common = { default-features = false, path = "../fip_common", version = "0.1.0" }
futures = { default-features = false, version = "0.3.13" }
http = { default-features = false, version = "0.2.3" }
hyper = { default-features = false, version = "0.14.4" }
jsonwebtoken = { default-features = false, version = "7.2.0" }
opentelemetry = { default-features = false, features = ["tokio-support", "trace"], version = "0.12.0" }
opentelemetry-jaeger = { default-features = false, features = ["tokio"], version = "0.11.0" }
prost = { default-features = false, version = "0.7.0" }
# rdkafka = { default-features = false, features = ["cmake-build"], version = "0.25.0" }
serde = { default-features = false, features = ["derive"], version = "1.0.124" }
sqlx = { default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"], version = "0.5.1" }
thiserror = { default-features = false, version = "1.0.24" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "time"], version = "1.3.0" }
tonic = { default-features = false, features = ["transport"], version = "0.4.0" }
tonic-health = { default-features = false, features = ["transport"], version = "0.3.0" }
tower-service = { default-features = false, version = "0.3.1" }
tracing = { default-features = false, version = "0.1.25" }
tracing-appender = { default-features = false, version = "0.1.2" }
tracing-bunyan-formatter = { default-features = false, version = "0.1.7" }
tracing-error = { default-features = false, version = "0.1.2" }
tracing-opentelemetry = { default-features = false, features = ["tracing-log"], version = "0.11.0" }
tracing-subscriber = { default-features = false, features = ["env-filter"], version = "0.2.17" }
uuid = { default-features = false, features = ["v4"], version = "0.8.2" }

[dev-dependencies]
cargo-husky = { default-features = false, features = ["user-hooks"], version = "1.5.0" }

[features]
default = []
attributes = []

[package]
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
categories = ["network-programming"]
# default-run = "default-run"
description = "fip_api"
edition = "2018"
homepage = ""
include = ["src/**/*", "proto/*", "build.rs"]
keywords = ["fpi", "api"]
license = "MIT"
name = "fip_api"
publish = false
repository = "https://github.com/smhmayboudi/fip"
version = "0.1.0"
