# [[bench]]

[[bin]]
# bench = true          # Is benchmarked by default.
# crate-type = ["bin"]  # The crate types to generate.
# doc = true            # Is documented by default.
# doctest = true        # Documentation examples are tested by default.
# edition = "2018"      # The edition of the target.
# harness = true        # Use libtest harness.
name = "fip_api"        # The name of the target.
path = "src/main.rs"    # The source file of the target.
# proc-macro = false    # Set to `true` for a proc-macro library.
required-features = []  # Features required to build this target (N/A for lib).
# test = true           # Is tested by default.

# [[example]]

# [[test]]

# [badges]

[build-dependencies]
tonic-build = { default-features = false, version = "0.5.2" }

[dependencies]
anyhow = { default-features = false, features = ["std"], version = "1.0.44" }
casbin = { default-features = false, features = ["runtime-async-std", "tokio"], version = "2.0.9" }
chrono = { default-features = false, version = "0.4.19" }
dotenv = { default-features = false, version = "0.15.0" }
envy = { default-features = false, version = "0.4.2" }
# fip_api_attributes = { default-features = false, path = "../fip_api_attributes", version = "0.1.0" }
fip_common = { default-features = false, path = "../fip_common", version = "0.1.0" }
futures = { default-features = false, version = "0.3.17" }
http = { default-features = false, version = "0.2.5" }
hyper = { default-features = false, version = "0.14.13" }
jsonwebtoken = { default-features = false, version = "7.2.0" }
opentelemetry = { default-features = false, features = ["rt-tokio"], version = "0.16.0" }
# opentelemetry-jaeger = { default-features = false, features = ["tokio"], version = "0.15.0" }
opentelemetry-zipkin = { default-features = false, features = ["reqwest-client"], version = "0.14.0" }
prost = { default-features = false, version = "0.8.0" }
# rdkafka = { default-features = false, features = ["cmake-build"], version = "0.26.0" }
serde = { default-features = false, features = ["derive"], version = "1.0.130" }
sqlx = { default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"], version = "0.5.9" }
thiserror = { default-features = false, version = "1.0.30" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "time"], version = "1.12.0" }
tonic = { default-features = false, features = ["transport"], version = "0.6.1" }
tonic-health = { default-features = false, features = ["transport"], version = "0.4.1" }
tower-service = { default-features = false, version = "0.3.1" }
tracing = { default-features = false, version = "0.1.29" }
tracing-appender = { default-features = false, version = "0.1.2" }
tracing-bunyan-formatter = { default-features = false, version = "0.2.6" }
tracing-error = { default-features = false, version = "0.1.2" }
tracing-opentelemetry = { default-features = false, features = ["tracing-log"], version = "0.15.0" }
tracing-subscriber = { default-features = false, features = ["env-filter", "fmt"], version = "0.2.25" }
uuid = { default-features = false, features = ["v4"], version = "0.8.2" }

# [dev-dependencies]

# [features]

[package]
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
categories = ["network-programming"]
description = "fip_api"
edition = "2018"
homepage = ""
include = [
    "src/**/*",
    "proto/*",
    "build.rs",
]
keywords = [
    "fip",
    "api",
]
license = "MIT"
name = "fip_api"
publish = false
repository = "https://github.com/smhmayboudi/fip"
version = "0.1.0"

# [profile]

# [patch]

# [replace]

# [workspace]
