# cargo-features

# [[bench]]

# [[bin]]

# [[example]]

# [[test]]

# [badges]

# [build-dependencies]

[dependencies]
# proc-macro2 = { default-features = false, version = "1.0.24" }
quote = { default-features = false, features = ["proc-macro"], version = "1.0.10" }
syn = { default-features = false, features = ["clone-impls", "derive", "extra-traits", "fold", "full", "extra-traits", "parsing", "printing", "proc-macro", "visit", "visit-mut"], version = "1.0.84" }

# [dev-dependencies]

# [features]

[lib]
# bench = true              # Is benchmarked by default.
crate-type = ["rlib"]       # The crate types to generate.
# doc = true                # Is documented by default.
# doctest = true            # Documentation examples are tested by default.
# edition = "2021"          # The edition of the target.
# harness = true            # Use libtest harness.
name = "fip_api_attributes" # The name of the target.
path = "src/lib.rs"         # The source file of the target.
proc-macro = true           # Set to `true` for a proc-macro library.
# required-features = []    # Features required to build this target (N/A for lib).
# test = true               # Is tested by default.

[package]
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
# autobins
# autobenches
# autoexamples
# autotests
# build
categories = ["network-programming"]
# default-run
description = "fip_api_attributes"
documentation = "https://github.com/smhmayboudi/fip/fip_api_attributes"
edition = "2021"
# exclude
homepage = "https://github.com/smhmayboudi/fip"
include = [
    "src/**/*",
]
keywords = [
    "fip",
    "api",
    "attributes",
]
license = "MIT"
# license-file
# links
# metadata
name = "fip_api_attributes"
publish = false
readme = "fip_api_attributes/README.md"
# resolver
rust-version = "1.57.0"
repository = "https://github.com/smhmayboudi/fip"
version = "0.1.0"
# workspace

# [patch]

# [profile.<name>]

# [replace]

# [target.<cfg>]

# [target.<triple>]

# [target.<triple>.<links>]

# [workspace]
