[dependencies]
http = { default-features = false, version = "0.2.3" }
jsonwebtoken = { default-features = false, version = "7.2.0" }
opentelemetry = { default-features = false, features = ["tokio-support", "trace"], version = "0.12.0" }
rdkafka = { default-features = false, features = ["cmake-build"], version = "0.25.0" }
sqlx = { default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"], version = "0.5.1" }
thiserror = { default-features = false, version = "1.0.24" }
tonic = { default-features = false, features = ["transport"], version = "0.4.0" }
tracing-error = { default-features = false, version = "0.1.2" }

[dev-dependencies]
cargo-husky = { default-features = false, features = ["user-hooks"], version = "1.5.0" }

[package]
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
categories = ["network-programming"]
description = "fip_common"
edition = "2018"
homepage = ""
include = ["src/**/*"]
keywords = ["fpi", "common"]
license = "MIT"
name = "fip_common"
publish = false
repository =  "https://github.com/smhmayboudi/fip"
version = "0.1.0"
