# cargo-features

# [[bench]]

# [[bin]]

# [[example]]

# [[test]]

# [badges]

# [build-dependencies]

[dependencies]
http = { default-features = false, version = "0.2.6" }
jsonwebtoken = { default-features = false, version = "7.2.0" }
opentelemetry = { default-features = false, features = ["rt-tokio"], version = "0.16.0" }
rdkafka = { default-features = false, features = ["cmake-build"], version = "0.28.0" }
sqlx = { default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"], version = "0.5.10" }
thiserror = { default-features = false, version = "1.0.30" }
tonic = { default-features = false, features = ["transport"], version = "0.6.2" }
tracing-error = { default-features = false, version = "0.2.0" }

# [dev-dependencies]

# [features]

[lib]
# bench = true          # Is benchmarked by default.
crate-type = ["rlib"]   # The crate types to generate.
# doc = true            # Is documented by default.
# doctest = true        # Documentation examples are tested by default.
# edition = "2021"      # The edition of the target.
# harness = true        # Use libtest harness.
name = "fip_common"     # The name of the target.
path = "src/lib.rs"     # The source file of the target.
# proc-macro = false    # Set to `true` for a proc-macro library.
# required-features = []# Features required to build this target (N/A for lib).
# test = true           # Is tested by default.

[package]
name = "fip_common"
version = "0.1.0"
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
# autobins
# autobenches
# autoexamples
# autotests
# build
categories = ["network-programming"]
# default-run
documentation = "https://github.com/smhmayboudi/fip/fip_common"
edition = "2021"
# exclude
homepage = "https://github.com/smhmayboudi/fip"
include = [
    "src/**/*",
]
keywords = [
    "fip",
    "common",
]
license = "MIT"
# license-file
# links
# metadata
publish = false
readme = "fip_common/README.md"
# resolver
rust-version = "1.58.0"
repository = "https://github.com/smhmayboudi/fip"
# workspace
description = "fip_common"

# [patch]

# [profile.<name>]

# [replace]

# [target.<cfg>]

# [target.<triple>]

# [target.<triple>.<links>]

# [workspace]
